chore(documentation site): fixes for dark mode when in mobile break point
affects: @entur/documentation

--- a/apps/documentation/src/components/SiteSidebar.scss
+++ b/apps/documentation/src/components/SiteSidebar.scss
@@ -1,31 +1,31 @@
-@import '../gatsby-theme-docz/variables';
+@use '../gatsby-theme-docz/variables' as site-var;
 
-@import '~@entur/tokens/dist/styles.scss';
-@import '~@entur/utils/dist/breakpoints.scss';
+@use '@entur/tokens/dist/styles.scss' as t;
+@use '@entur/utils/dist/breakpoints.scss' as breakpoint;
 
 .site-sidebar-wrapper {
   width: 100%;
-  transition: max-width $timings-fast ease-out;
+  transition: max-width t.$timings-fast ease-out;
   background: var(--components-menu-sidenavigation-standard-background);
 
-  @include for-desktop {
-    max-width: $site-sidebar-width--desktop;
+  @include breakpoint.for-desktop {
+    max-width: site-var.$site-sidebar-width--desktop;
     height: 100vh;
     left: 0;
-    top: $navbar-height;
+    top: site-var.$navbar-height;
     padding-bottom: 10rem;
     overflow-y: auto;
     position: fixed;
-    z-index: $z-indexes-sticky;
+    z-index: t.$z-indexes-sticky;
   }
-  @include for-large-desktop {
-    max-width: $site-sidebar-width--large-desktop;
+  @include breakpoint.for-large-desktop {
+    max-width: site-var.$site-sidebar-width--large-desktop;
   }
 }
 
 .site-sidebar__logo-svg {
   width: 100%;
-  padding: $space-extra-large2 $space-extra-large2 0 $space-extra-large2;
+  padding: t.$space-extra-large2 t.$space-extra-large2 0 t.$space-extra-large2;
 }
 
 .site-sidebar {
@@ -38,22 +38,28 @@
     position: fixed !important;
     top: 86vh;
     right: 0;
-    margin-top: -$navbar-height;
+    margin-top: -1 * site-var.$navbar-height;
     opacity: 0;
-    transition: right $timings-slow ease-in-out, opacity $timings-slow ease-in-out;
+    transition: right t.$timings-slow ease-in-out, opacity t.$timings-slow ease-in-out;
     &--open {
       opacity: 1;
       right: calc(20% - 24px);
     }
+  }
+  &__background {
+    min-height: 100dvh;
+    padding-top: t.$space-extra-large;
+    padding-bottom: t.$space-extra-large;
+    background-color: var(--components-menu-sidenavigation-standard-background);
   }
   &__backdrop {
     background: rgba(0, 0, 0, 0.5);
     height: 100%;
     width: 100%;
     position: fixed;
-    margin-top: -$navbar-height;
+    margin-top: -1 * site-var.$navbar-height;
     opacity: 1;
-    transition: opacity $timings-medium ease-in-out;
+    transition: opacity t.$timings-medium ease-in-out;
     &--inactive {
       opacity: 0;
     }
